# Grit

./: CMakeLists.txt  README.md
include/: docs.cpp  docs.h  funcs.cpp  funcs.h
src/: docs.cpp  docs.h  funcs.cpp  funcs.h  main.cpp
test/: hello.grit
